[package]
name = "crazyradio-server"
version = "0.1.1"
authors = ["Arnaud Taffanel <arnaud@taffanel.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crazyradio = "0.1.3"
zmq = { version = "0.9.2", features = ["vendored"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.4"
crossbeam-utils = "0.7"
rand="0.7"
clap="3.0.0-beta.1"
